kustomize/overlay/prod/test-ai-prod-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: test-ai-prod
  labels:
    organizationId: org_20c6c833-c6da-41ca-85b9-9573910c5b75
    projectId: project_17bc77cc-ff26-4453-ba19-dcc15014359f
    environmentId: env_9166c01c-e361-4657-95d3-3258aabfb1b6
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_9166c01c-e361-4657-95d3-3258aabfb1b6
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: skyu-system
    - from:
        - namespaceSelector:
            matchLabels:
              role: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              role: observability
